force-app/main/default/objects/Listing_hz__c/Listing_hz__c.object-meta.xml
<CustomObject>
    <label>Listing</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>