force-app/main/default/objects/Listing_hz__c/fields/Availability_Date__c.field-meta.xml
<CustomField>
    <fullName>Availability_Date__c</fullName>
    <label>Availability Date</label>
    <type>DateTime</type>
</CustomField>