force-app/main/default/objects/Listing_hz__c/fields/Broker_s_Listing_ID__c.field-meta.xml
<CustomField>
    <fullName>Broker_s_Listing_ID__c</fullName>
    <label>Broker&apos;s Listing ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>