force-app/main/default/objects/Listing_hz__c/fields/Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>Completion_Status__c</fullName>
    <label>Completion Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Off Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>