force-app/main/default/objects/Listing_hz__c/fields/Description_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Description_Arabic__c</fullName>
    <label>Description (Arabic)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>