force-app/main/default/objects/Listing_hz__c/fields/Description_hz__c.field-meta.xml
<CustomField>
    <fullName>Description_hz__c</fullName>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>