force-app/main/default/objects/Listing_hz__c/fields/Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Developer_Name__c</fullName>
    <formula>Developer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Developer Name</label>
    <type>Text</type>
</CustomField>