force-app/main/default/objects/Listing_hz__c/fields/DTCM_Permit_hz__c.field-meta.xml
<CustomField>
    <fullName>DTCM_Permit_hz__c</fullName>
    <description>Permit Number for Short-Term Rentals e.g. on Property Finder</description>
    <label>DTCM Permit Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>