force-app/main/default/objects/Listing_hz__c/fields/Feature_1__c.field-meta.xml
<CustomField>
    <fullName>Feature_1__c</fullName>
    <label>Feature 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>