force-app/main/default/objects/Listing_hz__c/fields/Feature_2__c.field-meta.xml
<CustomField>
    <fullName>Feature_2__c</fullName>
    <label>Feature 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>