force-app/main/default/objects/Listing_hz__c/fields/Feature_3__c.field-meta.xml
<CustomField>
    <fullName>Feature_3__c</fullName>
    <label>Feature 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>