force-app/main/default/objects/Listing_hz__c/fields/Floor_Level__c.field-meta.xml
<CustomField>
    <fullName>Floor_Level__c</fullName>
    <label>Floor Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ground</fullName>
            </value>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Upper</fullName>
            </value>
            <value>
                <fullName>Top</fullName>
            </value>
            <value>
                <fullName>Lower Ground Floor</fullName>
            </value>
            <value>
                <fullName>Upper Ground Floor</fullName>
            </value>
            <value>
                <fullName>Raised Ground Floor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>