force-app/main/default/objects/Listing_hz__c/fields/FullBathrooms_hz__c.field-meta.xml
<CustomField>
    <fullName>FullBathrooms_hz__c</fullName>
    <label>Bathrooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>