force-app/main/default/objects/Listing_hz__c/fields/Listing_Agent_Phone__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent_Phone__c</fullName>
    <label>Listing Agent Phone</label>
    <type>Phone</type>
</CustomField>