force-app/main/default/objects/Listing_hz__c/fields/ListingPrice_hz__c.field-meta.xml
<CustomField>
    <fullName>ListingPrice_hz__c</fullName>
    <label>Price</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>