force-app/main/default/objects/Listing_hz__c/fields/NumberOfParkingSpaces__c.field-meta.xml
<CustomField>
    <fullName>NumberOfParkingSpaces__c</fullName>
    <label>Number of Parking Spaces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>