force-app/main/default/objects/Listing_hz__c/fields/Off_plan__c.field-meta.xml
<CustomField>
    <fullName>Off_plan__c</fullName>
    <label>Off plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>