force-app/main/default/objects/Listing_hz__c/fields/Offer_Type__c.field-meta.xml
<CustomField>
    <fullName>Offer_Type__c</fullName>
    <formula>LEFT(TEXT(property_category__c ), 1) &amp; LEFT(TEXT(ListingType__c ), 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Type</label>
    <type>Text</type>
</CustomField>