force-app/main/default/objects/Listing_hz__c/fields/PropertyType__c.field-meta.xml
<CustomField>
    <fullName>PropertyType__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Townhouse</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
            <value>
                <fullName>Land</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Commercial Lease</fullName>
            </value>
            <value>
                <fullName>Commercial Sale</fullName>
            </value>
            <value>
                <fullName>Business/Commercial</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Residential Lease</fullName>
            </value>
            <value>
                <fullName>Residential Rental</fullName>
            </value>
            <value>
                <fullName>Waterfront</fullName>
            </value>
            <value>
                <fullName>Farm</fullName>
            </value>
            <value>
                <fullName>Boat Dock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>