force-app/main/default/objects/Listing_hz__c/fields/RERA_Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>RERA_Permit_Number__c</fullName>
    <description>Trakheesi Permit Number / Listing Permit Number</description>
    <label>RERA Permit Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>