force-app/main/default/objects/Listing_hz__c/fields/ShortformOfPropertyType__c.field-meta.xml
<CustomField>
    <fullName>ShortformOfPropertyType__c</fullName>
    <formula>CASE(
PropertyType__c ,
&quot;Apartment&quot;, &quot;AP&quot;,
&quot;Townhouse&quot;, &quot;TH&quot;,
&quot;Villa&quot;, &quot;VH&quot;,
&quot;Studio&quot;, &quot;SD&quot;,
&quot;Duplex&quot;, &quot;DX&quot;,
&quot;Penthouse&quot;, &quot;PH&quot;,
&quot;Land&quot;, &quot;LP&quot;,
&quot;Farm&quot;, &quot;FM&quot;,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShortformOfPropertyType</label>
    <type>Text</type>
</CustomField>