force-app/main/default/objects/Listing_hz__c/fields/Title_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Title_Arabic__c</fullName>
    <label>Title (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>