force-app/main/default/objects/Listing_hz__c/fields/Title_Deed__c.field-meta.xml
<CustomField>
    <fullName>Title_Deed__c</fullName>
    <label>Title Deed</label>
    <length>60</length>
    <type>Text</type>
</CustomField>