force-app/main/default/objects/Listing_hz__c/fields/TotalArea_hz__c.field-meta.xml
<CustomField>
    <fullName>TotalArea_hz__c</fullName>
    <label>Size</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>