force-app/main/default/objects/Listing_hz__c/validationRules/City_PropertyFinder_Require.validationRule-meta.xml
<ValidationRule>
    <fullName>City_PropertyFinder_Require</fullName>
    <active>true</active>
    <description>When we move to the status Active at that time, the PropertyFinder City Field is required.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Active&quot;),
ISBLANK(  City_Propertyfinder__c  )
)</errorConditionFormula>
    <errorDisplayField>City_Propertyfinder__c</errorDisplayField>
    <errorMessage>Please feel the details of the City - PropertyFinder Field.</errorMessage>
</ValidationRule>