force-app/main/default/objects/Listing_hz__c/validationRules/Community_PropertyFinder_Require.validationRule-meta.xml
<ValidationRule>
    <fullName>Community_PropertyFinder_Require</fullName>
    <active>true</active>
    <description>When we move to the status Active at that time, the Community PropertyFinder Field is required.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Active&quot;),
ISBLANK(  Community_Propertyfinder__c  )
)</errorConditionFormula>
    <errorDisplayField>Community_Propertyfinder__c</errorDisplayField>
    <errorMessage>Please feel the details of the Community - PropertyFinder Field.</errorMessage>
</ValidationRule>