force-app/main/default/objects/Listing_hz__c/validationRules/PropertyFinder_Require.validationRule-meta.xml
<ValidationRule>
    <fullName>PropertyFinder_Require</fullName>
    <active>true</active>
    <description>When we move to the status Active at that time, the PropertyFinder Region Field is required.</description>
    <errorConditionFormula>AND(
 ISPICKVAL(Status__c,&quot;Active&quot;),
ISBLANK( Propertyfinder_Region__c ) 
)</errorConditionFormula>
    <errorDisplayField>Propertyfinder_Region__c</errorDisplayField>
    <errorMessage>Please feel the details of the PropertyFinder Region Field.</errorMessage>
</ValidationRule>