force-app/main/default/objects/Listing_hz__c/validationRules/statusVerfication.validationRule-meta.xml
<ValidationRule>
    <fullName>statusVerfication</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Active&quot;),
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>user can&apos;t edit feilds except system administrator</errorMessage>
</ValidationRule>