force-app/main/default/objects/Listing_hz__c/listViews/Just_My_Active_Listings.listView-meta.xml
<ListView>
    <fullName>Just_My_Active_Listings</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>ListingPrice_hz__c</columns>
    <columns>Bedrooms_hz__c</columns>
    <columns>FullBathrooms_hz__c</columns>
    <columns>TotalArea_hz__c</columns>
    <columns>Overall_Days_On_Market__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>My Active Listings (A)</label>
    <sharedTo></sharedTo>
</ListView>