force-app/main/default/objects/Listing_hz__c/listViews/Just_My_New_Listings.listView-meta.xml
<ListView>
    <fullName>Just_My_New_Listings</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Address_hz__c</columns>
    <columns>ListingPrice_hz__c</columns>
    <columns>Bedrooms_hz__c</columns>
    <columns>FullBathrooms_hz__c</columns>
    <columns>TotalArea_hz__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:3</value>
    </filters>
    <label>My New Listings (A)</label>
    <sharedTo></sharedTo>
</ListView>