force-app/main/default/objects/Listing_hz__c/listViews/Just_My_Sold_Listings.listView-meta.xml
<ListView>
    <fullName>Just_My_Sold_Listings</fullName>
    <columns>NAME</columns>
    <columns>ListingPrice_hz__c</columns>
    <columns>Sale_Price__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Address_hz__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Sold,Rented</value>
    </filters>
    <label>My Sold &amp; Rented Listings (A)</label>
    <sharedTo></sharedTo>
</ListView>