force-app/main/default/objects/Listing_hz__c/listViews/My_Off_Market_Listings.listView-meta.xml
<ListView>
    <fullName>My_Off_Market_Listings</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>ListingPrice_hz__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>PropertyType__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Off-Market</value>
    </filters>
    <label>My Off Market Listings (A)</label>
    <sharedTo></sharedTo>
</ListView>