force-app/main/default/objects/Listing_hz__c/listViews/My_Pending_Listings_M.listView-meta.xml
<ListView>
    <fullName>My_Pending_Listings_M</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>ListingToSoldPriceRatio_hz__c</columns>
    <columns>Bedrooms_hz__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>All Pending Listings (M)</label>
    <sharedTo></sharedTo>
</ListView>