force-app/main/default/objects/Listing_hz__c/listViews/My_Withdrawn_Listings_A.listView-meta.xml
<ListView>
    <fullName>My_Withdrawn_Listings_A</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>ListingPrice_hz__c</columns>
    <columns>Address_hz__c</columns>
    <columns>Bedrooms_hz__c</columns>
    <columns>TotalArea_hz__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Withdrawn</value>
    </filters>
    <label>My Withdrawn Listings (A)</label>
    <sharedTo></sharedTo>
</ListView>