force-app/main/default/objects/Listing_hz__c/listViews/Permit_Working_Listing.listView-meta.xml
<ListView>
    <fullName>Permit_Working_Listing</fullName>
    <columns>Address_hz__c</columns>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Listing_Agent_Phone__c</columns>
    <columns>ListingPrice_hz__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Bayut_Boost__c</columns>
    <columns>Propertyfinder_Boost__c</columns>
    <columns>Bedrooms_hz__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Permit Working Listing</label>
    <sharedTo></sharedTo>
</ListView>